Made proper structuring of app

--- a/public/stylesheets/memepage.css
+++ b/public/stylesheets/memepage.css
@@ -1,14 +1,25 @@
-.img-thumbnail img{
-	width:100%;
-	height:430px;
-	padding-bottom:5px;
-}
-.img-thumbnail{
-	padding:10px;
-	height:500px;
-	margin-top:20px;
+.img-thumbnail img {
+    width: 100%;
+    height: 430px;
+    padding-bottom: 5px;
 }
 
-.img-thumbnail .caption-full{
-	padding:9px;
+.img-thumbnail {
+    padding: 10px;
+    height: 500px;
+    margin-top: 20px;
+}
+
+.img-thumbnail .caption-full {
+    padding: 9px;
+}
+
+#newmeme {
+    /* border: 2px solid black; */
+    padding: 10px;
+    background-color: pink
+}
+
+.jumbotron {
+    background-color: #34ebe8
 }
