--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,95 +1,44 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Sign Up</title>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">	
-</head>
-<body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-	<div class="container">
-  		<a class="navbar-brand" href="#">Enterr</a>
-  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-				controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    		<span class="navbar-toggler-icon"></span>
-  		</button>
+<%- include("header") -%>
+    <title>Sign Up</title>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/darkmode.css">
+    </head>
 
-  		<div class="collapse navbar-collapse" id="navbarSupportedContent1">
-    	<ul class="navbar-nav mr-auto">
-    	  
-     	 <li class="nav-item">
-     	   <a class="nav-link" href="/memes">Memes</a>
-     	 </li>
-			
-		<li class="nav-item">
-     	   <a class="nav-link" href="/findme">Find me</a>
-     	 </li>
-			
-		<li class="nav-item">
-     	   <a class="nav-link" href="/quiz">Quiz</a>
-     	 </li>
-			
-     	</ul>
-    	<form class="form-inline my-2 my-lg-0">
-      	<ul class="navbar-nav mr-auto">
-      			<% if(!currentUser){ %>
-				<li class="nav-item">
-        			<a class="nav-link active" href="/signup"><span><i class="fas fa-user-plus"></i></span> Sign Up</a>
-      			</li>
-      			<li class="nav-item">
-        			<a class="nav-link" href="/login"><span><i class="fas fa-user"></i></span> Login</a>
-      			</li>
-			<%}
-      		else{%>
-				<li class="nav-item"><a class="nav-link" href="#">Signed in as <%=currentUser.username %></a></li>
-				<li class="nav-item">
-        			<a class="nav-link" href="/logout"><span><i class="fas fa-sign-out-alt"></i></span>  Logout</a>
-      			</li>
-			<%}%>
-				<li class="nav-item">
-    	    		<a class="nav-link active dark-mode-toggle" id="dark-mode-toggle" href="#">Toggle mode</a>
-    	  		</li>
-     	</ul>
-    	</form>
-  		</div>
-	</div>
-</nav><br><br>
+    <body>
+        <%- include("navbar") -%>
+            <br><br>
 
-<div class="container">
-	<div class="container">
-		<% if(error && error.length>0){%>
-	<div class="alert alert-danger" role="alert">
-		<%=error%>
-	</div>
-	<%}
+            <div class="container">
+                <div class="container">
+                    <% if(error && error.length>0){%>
+                        <div class="alert alert-danger" role="alert">
+                            <%=error%>
+                        </div>
+                        <%}
 	if(success && success.length>0){%>
-	<div class="alert alert-success" role="alert">
-		<%=success%>
-	</div>
-	<%}%>
-	</div>
-	
-	<h1>Sign Up</h1>
-	<form action="/signup" method="POST">
-  		<div class="form-group" >
-    		<label for="username">Username</label>
-    		<input type="text" name="username" class="form-control" id="username" placeholder="Give a crazy name for your meme page" required>
-  		</div>
-  		<div class="form-group">
-    		<label for="password">Password</label>
-    		<input type="password" name="password" class="form-control" id="password" placeholder="password (min 6 charcaters)" minlength=6 required title="Above 6 CHARACTERS">
-  		</div>
-  		<button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
-	</form>
-<br>
-<p>Already have a account   
-	  <a href="/login" class="btn btn-secondary btn-lg">Login</a>
-</p>
-</div>
-<br>
-<script type="text/javascript" src="/scripts/abcd.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
-</html>
+                            <div class="alert alert-success" role="alert">
+                                <%=success%>
+                            </div>
+                            <%}%>
+                </div>
+
+                <h1>Sign Up</h1>
+                <form action="/signup" method="POST">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" name="username" class="form-control" id="username" placeholder="Give a crazy name for your meme page" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" class="form-control" id="password" placeholder="password (min 7 charcaters)" minlength=7 required title="Minimum 7 characters">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+                </form>
+                <br>
+                <p>Already have a account
+                    <a href="/login" class="btn btn-secondary btn-lg">Login</a>
+                </p>
+            </div>
+            <br>
+            <%- include("footer") -%>
